<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.networks.test.esi.RealizarVendaActivity">

    <TextView
        android:id="@+id/venda_vender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/realizando_venda_string"
        android:layout_margin="10dp"
        android:textColor="@color/preto"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/venda_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bordinha"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/venda_vender"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            android:id="@+id/venda_heliNome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nome_string"
            android:layout_margin="30dp"
            android:textColor="@color/corDestaque"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            android:id="@+id/venda_heliFabricante"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_fabricante"
            android:layout_margin="10dp"
            android:textColor="@color/corDestaque"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/venda_heliNome"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/venda_container2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/venda_heliFabricante">
            <TextView
                android:id="@+id/venda_clienteText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cliente_string"
                android:textSize="18sp"
                android:layout_margin="15dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"/>

            <TextView
                android:id="@+id/venda_clienteDaCompra"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/selecione_string"
                android:textSize="18sp"
                android:layout_margin="15dp"
                android:textColor="@color/preto"
                android:textStyle="bold"
                app:layout_constraintLeft_toRightOf="@id/venda_clienteText"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <Button
                android:id="@+id/venda_botBuscaCli"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buscas_string"
                android:layout_margin="10dp"
                android:background="@drawable/botoes"
                android:textColor="@color/branco"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/venda_container3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/venda_container2"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/venda_quantidade"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:hint="@string/quantidade_string"
                android:inputType="number"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/venda_estoque"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/preco_venda_valor"
                android:layout_margin="10dp"
                android:textColor="@color/corDestaque"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_estoque"
                android:layout_margin="10dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toLeftOf="@id/venda_estoque"/>
        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/venda_container4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/venda_container3"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/venda_preco"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:hint="@string/item_venda"
                android:inputType="numberDecimal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/venda_precoSugerido"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/preco_venda_valor"
                android:layout_margin="10dp"
                android:textColor="@color/corDestaque"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/preco_sugerido_string"
                android:layout_margin="10dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toLeftOf="@id/venda_precoSugerido"/>
        </android.support.constraint.ConstraintLayout>

        <Button
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:id="@+id/venda_botao_venda"
            android:text="@string/realizar_venda_string"
            android:background="@drawable/botoes"
            android:textColor="@color/branco"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="30dp"
            app:layout_constraintTop_toBottomOf="@id/venda_container4"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <Button
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:id="@+id/venda_botao_cancelar"
            android:text="@string/cancelar_string"
            android:background="@drawable/botoes"
            android:textColor="@color/branco"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintTop_toBottomOf="@id/venda_botao_venda"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>
