<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.networks.test.esi.RealizarCompraActivity">

    <android.support.design.widget.TextInputEditText
        android:id="@+id/compra_cliente"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:hint="@string/cliente_string"
        android:inputType="text"
        android:layout_marginBottom="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <android.support.design.widget.TextInputEditText
        android:id="@+id/compra_quantidade"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:hint="@string/quantidade_string"
        android:inputType="number"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/compra_cliente" />

    <android.support.design.widget.TextInputEditText
        android:id="@+id/compra_preco"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:hint="@string/item_compra"
        android:inputType="numberDecimal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/compra_quantidade" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/compra_botao_venda"
        android:text="@string/realizar_compra_string"
        android:background="@color/corDestaque"
        android:textColor="@color/branco"
        android:layout_margin="50dp"
        app:layout_constraintTop_toBottomOf="@id/compra_preco"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

</android.support.constraint.ConstraintLayout>
