<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.networks.test.esi.AdicionarClienteActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bordinha"
        android:layout_margin="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/addCliente_nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nome_string"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:inputType="text"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <android.support.design.widget.TextInputEditText
            android:id="@+id/addCliente_endereco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enderecoo_string"
            android:layout_margin="20dp"
            android:maxLines="1"
            android:inputType="text"
            app:layout_constraintTop_toBottomOf="@id/addCliente_nome"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <android.support.design.widget.TextInputEditText
            android:id="@+id/addCliente_cpf_cnpj"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cpf_cnpj_string"
            android:layout_margin="20dp"
            android:maxLines="1"
            android:inputType="number"
            app:layout_constraintTop_toBottomOf="@id/addCliente_endereco"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <android.support.design.widget.TextInputEditText
            android:id="@+id/addCliente_telefone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/telefone_string"
            android:layout_margin="20dp"
            android:maxLines="1"
            android:inputType="number"
            app:layout_constraintTop_toBottomOf="@id/addCliente_cpf_cnpj"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <Button
            android:id="@+id/addCliente_botSalvar"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/action_register"
            android:background="@drawable/botoes"
            android:textColor="@color/branco"
            android:layout_margin="20dp"
            app:layout_constraintTop_toBottomOf="@id/addCliente_telefone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <Button
            android:id="@+id/addCliente_botCancelar"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/cancelar_string"
            android:background="@drawable/botoes"
            android:textColor="@color/branco"
            android:layout_margin="20dp"
            app:layout_constraintTop_toBottomOf="@id/addCliente_botSalvar"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>
