<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_busca"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.networks.test.esi.BuscarInventarioActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/texto_busca"
        android:text="@string/nome_fabricante_digitar"
        android:layout_margin="10dp"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <SearchView
        android:id="@+id/searchView"
        android:layout_width="230dp"
        android:layout_height="70dp"
        android:layout_margin="10dp"
        android:queryHint="@string/nome_fabricante_digitar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/texto_busca" />

    <Button
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:layout_margin="10dp"
        android:id="@+id/botao_busca"
        android:text="@string/buscas_string"
        android:background="@drawable/botoes"
        android:textColor="@color/branco"
        app:layout_constraintTop_toBottomOf="@id/texto_busca"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nome_heli_buscar"
        android:text="@string/nome_string"
        android:layout_margin="10dp"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/botao_busca"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fabricante_heli_buscar"
        android:text="@string/item_fabricante"
        android:layout_margin="10dp"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/botao_busca"
        app:layout_constraintRight_toRightOf="parent"/>

    <ListView
        android:id="@+id/buscaInve_listView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        app:layout_goneMarginLeft="10dp"
        app:layout_constraintTop_toBottomOf="@id/nome_heli_buscar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
    </ListView>

</android.support.constraint.ConstraintLayout>
