<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.networks.test.esi.InserirInventarioActivity">

    <ImageButton
        android:id="@+id/HeliPhoto"
        android:layout_width="123dp"
        android:layout_height="125dp"
        app:srcCompat="?android:attr/textSelectHandle"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="9dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="9dp" />

    <Button
        android:id="@+id/registrarItem"
        android:layout_width="164dp"
        android:layout_height="51dp"
        android:text="@string/action_register"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="37dp"
        app:layout_constraintTop_toBottomOf="@+id/InputInsertPrice"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/InputInsertVelocidade"
        android:layout_width="104dp"
        android:layout_height="57dp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/HeliPhoto"
        android:layout_marginLeft="21dp"
        app:layout_constraintRight_toLeftOf="@+id/InputInsertFrenagem"
        android:layout_marginRight="8dp"
        android:layout_marginStart="21dp"
        android:layout_marginEnd="8dp">

        <EditText
            android:id="@+id/InsertVelocidade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/item_velocidade"
            android:inputType="numberDecimal" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/InputInsertFrenagem"
        android:layout_width="104dp"
        android:layout_height="57dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent">

        <EditText
            android:id="@+id/InsertFrenagem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/item_frenagem"
            android:inputType="numberDecimal" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/InputInsertCapacidade"
        android:layout_width="109dp"
        android:layout_height="50dp"
        android:layout_marginTop="14dp"
        app:layout_constraintTop_toBottomOf="@+id/HeliPhoto"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.027"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">

        <EditText
            android:id="@+id/InsertCapacidade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/item_capacidade"
            android:inputType="number" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/InputInsertName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/InputInsertManuf">

        <EditText
            android:id="@+id/InsertName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/item_nome"
            tools:layout_editor_absoluteX="39dp"
            tools:layout_editor_absoluteY="168dp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/InputInsertManuf"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="226dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="8dp">

        <EditText
            android:id="@+id/InsertManuf"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/item_fabricante"
            tools:layout_editor_absoluteX="39dp"
            tools:layout_editor_absoluteY="168dp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/InputInsertPrice"
        android:layout_width="344dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/InputInsertName"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent">

        <EditText
            android:id="@+id/InsertPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/item_compra"
            android:inputType="number|numberDecimal"
            tools:layout_editor_absoluteX="39dp"
            tools:layout_editor_absoluteY="168dp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/InputInsertAceleracao"
        android:layout_width="104dp"
        android:layout_height="57dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="34dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="-5dp"
        app:layout_constraintHorizontal_bias="0.657"
        app:layout_constraintLeft_toRightOf="@+id/HeliPhoto"
        app:layout_constraintRight_toLeftOf="@+id/InputInsertControle"
        app:layout_constraintTop_toBottomOf="@+id/InputInsertVelocidade">

        <EditText
            android:id="@+id/InsertAceleracao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/item_aceleração"
            android:inputType="numberDecimal"
            tools:layout_editor_absoluteX="166dp"
            tools:layout_editor_absoluteY="107dp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/InputInsertControle"
        android:layout_width="104dp"
        android:layout_height="57dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="-5dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/InputInsertFrenagem">

        <EditText
            android:id="@+id/InsertControle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/item_controle"
            android:inputType="numberDecimal" />
    </android.support.design.widget.TextInputLayout>

</android.support.constraint.ConstraintLayout>
